[package]
name = "actix_compliment"
version = "0.1.0"
authors = ["Stewart Wilson <thekidxp@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "1.0"
handlebars = "2.0.2"
serde_json = "1.0"
actix-files = "0.1.4"
motivations = "1.1.2"
rand = "0.7.2"